--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "cross-env": "^5.0.5",
     "css-loader": "^0.28.7",
     "file-loader": "^1.1.4",
+    "mocha": "^4.0.1",
+    "mocha-webpack": "^1.0.0-rc.1",
+    "expects": "^0.1.0",
     "node-sass": "^4.5.3",
     "sass-loader": "^6.0.6",
     "vue-loader": "^13.0.5",
